real-time-stt/rest-api/v5.x/start.mdx
---
title: 'Start a Real-time STT task'
sidebar_position: 2
type: docs
platform_selector: false
hide_table_of_contents: true
description: >
   Start speech-to-text transcription.
last_update:
  date: 2026-04-04
---

import RestAPILayout from '@site/src/components/rest-api/RestAPILayout';
import LeftColumn from '@site/src/components/rest-api/LeftColumn';
import RightColumn, { Section } from '@site/src/components/rest-api/RightColumn';
import ParameterList, { Parameter } from '@site/src/components/rest-api/ParameterList';
import PathParameter from '@site/src/components/rest-api/PathParameter';
import { Tabs, TabItem } from '@site/src/components/rest-api/Tabs';

<RestAPILayout>
  <LeftColumn
    method="POST"
    endpoint="https://api.agora.io/v1/projects/{appId}/rtsc/speech-to-text/tasks"
  >

After you [`acquire`](../rest-api/acquire) a `builderToken`, call this method within 5 minutes to start speech-to-text conversion.

## Request

### Path parameters

<PathParameter name="appId" type="string" required={true}>
The App ID of the project
</PathParameter>

### Query parameters

<PathParameter name="builderToken" type="string" required={true}>
The `tokenName` value you obtained in the response body of the [`acquire`](../v5.x/acquire) method.  To stop a task, use the same `builderToken` you used to start the task.
</PathParameter>

### Request body

<div className="api-mime-type">APPLICATION/JSON</div>

<ParameterList title="BODY" required={true}>
  <Parameter name="languages" type="array[string]" required={true}>
    The transcription languages to recognize. You can specify a maximum of 2 languages. Refer to [Supported Languages](/real-time-stt/develop/supported-languages) for details.
  </Parameter>

  <Parameter name="maxIdleTime" type="integer" required={false} defaultValue="30" possibleValues="5 to 2592000">
    Maximum channel idle time, in seconds. When the specified time is exceeded, the transcription task ends automatically.
  </Parameter>

  <Parameter name="rtcConfig" type="object" required={true}>
    <Parameter name="channelName" type="string" required={true}>
      The name of the channel to transcribe.
    </Parameter>
    <Parameter name="subBotUid" type="string" required={true}>
      The ID of the bot that subscribes to the audio stream. All UIDs within a channel must be unique. Ensure no other user or service bot is using this UID in the same channel.
    </Parameter>
    <Parameter name="subBotToken" type="string" required={false}>
      The token used by the subscribing bot for channel authentication. Required only when your project has App Certificate enabled. Generate this token on your token server. For details, see [Token authentication](/video-calling/token-authentication/deploy-token-server).
    </Parameter>
    <Parameter name="pubBotUid" type="string" required={true}>
      The ID of the bot that pushes subtitle information to the channel. All UIDs within a channel must be unique. Ensure no other user or service bot is using this UID in the same channel.
    </Parameter>
    <Parameter name="pubBotToken" type="string" required={false}>
      The token used by the subtitle-pushing bot for channel authentication. Required only when your project has [App Certificate](/video-calling/overview/core-concepts?platform=android#app-certificate) enabled. Generate this token on your token server. For details, see [Token authentication](/video-calling/token-authentication/deploy-token-server).
    </Parameter>
    <Parameter name="subscribeAudioUids" type="array[string]" required={false}>
      The user IDs of the audio streams you want to subscribe to. Specify this parameter only if you need to subscribe to specific users. Maximum array length: 3.
    </Parameter>
    <Parameter name="cryptionMode" type="integer" required={false} possibleValues="0 to 8">
      The encryption and decryption mode. When enabled, this mode is used for both decrypting incoming streams and encrypting outgoing subtitles.
      - `0`: No encryption
      - `1`: `AES_128_XTS` 128-bit AES encryption, XTS mode
      - `2`: `AES_128_ECB` 128-bit AES encryption, ECB mode
      - `3`: `AES_256_XTS` 256-bit AES encryption, XTS mode
      - `4`: `SM4_128_ECB` 128-bit SM4 encryption, ECB mode
      - `5`: `AES_128_GCM` 128-bit AES encryption, GCM mode
      - `6`: `AES_256_GCM` 256-bit AES encryption, GCM mode
      - `7`: `AES_128_GCM2` 128-bit AES encryption, GCM mode, requires key and salt
      - `8`: `AES_256_GCM2` 256-bit AES encryption, GCM mode, requires key and salt
      The decryption method must match the encryption method set for the channel.
    </Parameter>
    <Parameter name="secret" type="string" required={false}>
      The encryption/decryption key. Required when `cryptionMode` is not `0`.
    </Parameter>
    <Parameter name="salt" type="string" required={false}>
      A Base64-encoded, 32-byte encryption/decryption salt. Required only when `cryptionMode` is `7` or `8`.
    </Parameter>
    <Parameter name="enableJsonProtocol" type="boolean" required={false} defaultValue="false">
      Set the encoding format of the subtitle data pushed to the channel.
      - `true`: Use JSON to push subtitles and compress data with gzip. Uses less bandwidth, but requires decoding.
      - `false`: Use Protobuf to push subtitles (default). The data volume is smaller. Suitable for scenarios with high transmission efficiency requirements.
    </Parameter>
    <Parameter name="transferMode" type="array[string]" required={false}>
      Select the channel to push, RTM or RTC
    </Parameter>    
  </Parameter>
  <Parameter name="captionConfig" type="object" required={false}>
    <Parameter name="sliceDuration" type="integer" required={false} defaultValue="60" possibleValues="5 to 28800">
      The slice size of the recorded subtitle file, in seconds.
    </Parameter>
    <Parameter name="storage" type="object" required={true}>
      <Parameter name="accesskey" type="string" required={true}>
        The access key of the third-party cloud storage.
      </Parameter>      
      <Parameter name="secretkey" type="string" required={true}>
        The secret key of the third-party cloud storage.
      </Parameter>      
      <Parameter name="bucket" type="string" required={true}>
        The bucket name of the third-party cloud storage.
      </Parameter>      
      <Parameter name="vendor" type="integer" required={true} possibleValues="1,5,6">
        The third-party cloud storage platform:        
        - `1`: Amazon S3
        - `5`: Microsoft Azure
        - `6`: Google Cloud
      </Parameter>
      <Parameter name="region" type="integer" required={true}>
        The region information for the third-party cloud storage. To ensure successful and real-time uploading of recorded files, the cloud storage region must match the region of the application server where you initiate the request. For example, if your App server is in East US, set the cloud storage region to East US as well. See [third-party storage regions](/cloud-recording/reference/region-vendor) for details.
      </Parameter>
      <Parameter name="fileNamePrefix" type="array[string]" required={false}>
        The storage location of the recorded file in the third-party cloud storage. The prefix length (including slashes) must not exceed 128 characters. The following characters are supported:        
        - Lowercase English letters (a-z)
        - Uppercase English letters (A-Z)
        - Numbers (0-9)        
        Symbols like slashes, underscores, and brackets must not appear in the string.
      </Parameter>      
    </Parameter>
  </Parameter>
  <Parameter name="translateConfig" type="object" required={false}>
    <Parameter name="forceTranslateInterval" type="integer" required={false} defaultValue="3" possibleValues="2 to 5">
      The time interval for forced translation, in seconds.
    </Parameter>    
    <Parameter name="languages" type="array" required={true}>
      The translation language array. You can specify a maximum of 2 different source languages. The source language and target language must be different, otherwise an error is reported.      
      Each array item is an object with:
      <Parameter name="source" type="string" required={true}>
        The source language for translation. Refer to [Supported Languages](/real-time-stt/develop/supported-languages) for details.
      </Parameter>      
      <Parameter name="target" type="array[string]" required={true}>
        The target languages for translation. You can specify a maximum of 5 target languages for each source language. Refer to [Supported Languages](/real-time-stt/develop/translation#supported-languages) for details.
      </Parameter>
    </Parameter>
  </Parameter>    
</ParameterList>

## Response

- If the returned status code is `200`, the request was successful. The response body contains the result of the request.

  <ParameterList title="OK">
    <Parameter name="taskId" type="string" required={true}>
      The unique identifier of this transcription task.
    </Parameter>

    <Parameter name="createTs" type="integer" required={true}>
      The Unix timestamp (in seconds) when the transcription task was created.
    </Parameter>

    <Parameter name="status" type="string" required={true}>
      The current status of the transcription task:      
      - `IDLE`: Task not initialized
      - `PREPARING`: Task has received an initialization request
      - `PREPARED`: Task initialization completed
      - `STARTING`: Task is beginning to start
      - `CREATED`: Task startup partially completed
      - `STARTED`: Task startup fully completed
      - `IN_PROGRESS`: Task is currently running
      - `STOPPING`: Task is in the process of being paused
      - `STOPPED`: Task has been terminated
      - `FAILURE_STOP`: Task termination failed
    </Parameter>  
  </ParameterList>

- If the returned status code is not `200`, the request failed.  Refer to the `message` field to understand the possible reasons for failure.

  <ParameterList title="Non-200">
    <Parameter name="message" type="string">
      The reason why the request failed.
    </Parameter>   
  </ParameterList>

     
</LeftColumn>

<RightColumn>

<Section title="Authorization">
This endpoint requires [Basic Auth](../restful-authentication).
</Section>

<Section title="Request example">

  <Tabs groupId="code-examples">
    <TabItem value="curl" label="curl" default>
      ```bash
      curl --request POST \
        --url 'https://api.agora.io/v1/projects/:appId/rtsc/speech-to-text/tasks?builderToken=your_builder_token' \
        --header 'Authorization: Basic <credentials>'   
      ```
    </TabItem>
    <TabItem value="python" label="Python">

    ```python
    import requests

    url = "https://api.agora.io/v1/projects/:appId/rtsc/speech-to-text/tasks?builderToken=your_builder_token"

    headers = {"Authorization": "Basic <credentials>"}

    response = requests.request("POST", url, headers=headers)

    print(response.text)
    ```
    </TabItem>

    <TabItem value="node" label="Node.js">

    ```js
    const url = 'https://api.agora.io/v1/projects/:appId/rtsc/speech-to-text/tasks?builderToken=your_builder_token';
    const options = {method: 'POST', headers: {Authorization: 'Basic <credentials>'}};

    fetch(url, options)
      .then(res => res.json())
      .then(json => console.log(json))
      .catch(err => console.error(err));
    ```
    </TabItem>
  </Tabs>

</Section>
<Section title="Response example">

<Tabs groupId="response-examples">
  <TabItem value="200" label="200" default>

    ```json
    {
      "taskId": "The unique identifier of this transcription task",
      "createTs": null,
      "status": "The status of the task"
    }
    ```
  </TabItem>
  <TabItem value="non-200" label="Non-200">

    ```json
    {
      "message": "The reason why the request failed.",
    }
    ```
  </TabItem>
</Tabs>

</Section>
</RightColumn>
</RestAPILayout>